--- a/info.html
+++ b/info.html
@@ -13,10 +13,15 @@
 <body>
     <header>
         <h4>BitShow</h4>
-        <input type="text">
+        <input class="input" type="text">
+        <ul class="src-list">
+
+        </ul>
     </header>
+
+
     <main>
-        <h1 class="title">Under The Dome</h1>
+        <h1 class="title"></h1>
 
         <div class="wraper">
             <div class="upper">
