--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 <body>
     <header>
         <h4>BitShow</h4>
-        <input type="text">
+        <input class="input" type="text">
+        <ul class="src-list">
+
+        </ul>
     </header>
     <main>
         <h1>Popular Shows</h2>
